--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,9 @@ repositories {
 }
 
 dependencies {
-
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.1'
-
+    testImplementation 'junit:junit:4.13'
 }
 
 test {
-    useJUnitPlatform()
+    useJUnit()
 }
